# ft_mmi

./: .gitignore  README.en.md  README.md  runMMI.sh
etc/: mmi.xml
input/: ft_multimodalinput_mini.gni  multimodalinput_mini.gni
input/frameworks/proxy/event_handler/include/: input_device_impl.h
input/frameworks/proxy/event_handler/src/: bytrace_adapter.cpp  input_manager_impl.cpp  key_event_input_subscribe_manager.cpp
input/frameworks/proxy/events/include/: event_log_helper.h
input/frameworks/proxy/events/src/: key_event.cpp
input/frameworks/proxy/events/test/: ft_input_manager_anr_test.cpp  ft_input_manager_test.cpp  ft_input_manager_test_startmove.cpp
input/frameworks/proxy/events/test/ft_build/: BUILD.gn
input/frameworks/proxy/ft_build/: BUILD.gn
input/interfaces/native/innerkits/event/include/: i_anr_observer.h  i_input_event_consumer.h
input/service/connect_manager/: BUILD.gn
input/service/connect_manager/ft_build/: BUILD.gn
input/service/connect_manager/src/: multimodal_input_connect_manager.cpp
input/service/device_manager/include/: input_device_manager.h
input/service/device_manager/src/: input_device_manager.cpp
input/service/event_dispatch/src/: event_dispatch_handler.cpp
input/service/event_handler/include/: key_map_manager.h
input/service/event_handler/src/: event_normalize_handler.cpp  key_map_manager.cpp
input/service/filter/ft_build/: BUILD.gn
input/service/ft_build/: BUILD.gn
input/service/input_device_cooperate/include/: input_device_cooperate_state_free.h
input/service/input_device_cooperate/src/: input_device_cooperate_sm.cpp
input/service/key_event_normalize/src/: key_event_normalize.cpp
input/service/libinput_adapter/include/: libinput_adapter.h
input/service/libinput_adapter/src/: libinput_adapter.cpp
input/service/message_handle/src/: server_msg_handler.cpp
input/service/module_loader/src/: mmi_service.cpp
input/service/mouse_event_normalize/include/: mouse_event_normalize.h
input/service/mouse_event_normalize/src/: mouse_event_normalize.cpp
input/service/permission_helper/include/: permission_helper.h
input/service/permission_helper/src/: ft_permission_helper.cpp  permission_helper.cpp
input/service/touch_event_normalize/src/: tablet_tool_tranform_processor.cpp  touch_transform_processor.cpp  touchpad_transform_processor.cpp
input/service/window_manager/include/: ft_pointer_drawing_manager.h  i_pointer_drawing_manager.h  input_windows_manager.h
input/service/window_manager/src/: ft_pointer_drawing_manager.cpp  input_windows_manager.cpp
input/stub/draw/: canvas.h
input/test/unittest/common/include/: event_util_test.h
input/test/unittest/common/src/: event_util_test.cpp
input/util/: BUILD.gn
input/util/common/include/: device_observer.h  mmi_log.h  util_napi_error.h
input/util/common/src/: util.cpp
input/util/ft_build/: BUILD.gn
