# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/multimodalinput/input/multimodalinput_mini.gni")

config("mmi_connect_manager_config") {
  include_dirs = [
    "//foundation/multimodalinput/input/interfaces/native/innerkits/common/include",
    "//foundation/multimodalinput/input/interfaces/native/innerkits/event/include",
    "//foundation/multimodalinput/input/util/common/include",
    "//foundation/multimodalinput/input/util/network/include",
    "//foundation/multimodalinput/input/util/socket/include",
    "//foundation/multimodalinput/input/service/delegate_task/include",
    "//foundation/multimodalinput/input/service/filter/include",
    "//foundation/multimodalinput/input/service/message_handle/include",
    "//foundation/multimodalinput/input/service/permission_helper/include",
    "//foundation/multimodalinput/input/frameworks/proxy/event_handler/include",
    "../include",
  ]
}

ohos_source_set("mmi_connect_manager_service") {
  part_name = "input"
  subsystem_name = "multimodalinput"
  sources =
      [ "../src/multimodal_input_connect_stub.cpp" ]

  if (!input_feature_input_cooperation) {
    sources += [
      "../src/multimodal_input_connect_def_parcel.cpp",
    ]
  }

  configs = [ ":mmi_connect_manager_config" ]

  external_deps = [
    "access_token:libaccesstoken_sdk",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]
}

ohos_source_set("mmi_connect_manager_proxy") {
  part_name = "input"
  subsystem_name = "multimodalinput"
  sources = [
    "../src/multimodal_input_connect_death_recipient.cpp",
    "../src/multimodal_input_connect_def_parcel.cpp",
    "../src/multimodal_input_connect_manager.cpp",
    "../src/multimodal_input_connect_proxy.cpp",
  ]

  configs = [ ":mmi_connect_manager_config" ]

  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]
}
