# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/gn/fangtian.gni")
import("//input/ft_multimodalinput_mini.gni")

mmi_util_path = "${mmi_path}/util"

config("libmmi_util_public_config") {
  include_dirs = [
    "${mmi_util_path}/common/include",
    "${mmi_util_path}/network/include",
    "${mmi_util_path}/socket/include",
    "${mmi_path}/interfaces/native/innerkits/common/include",
    "${mmi_path}/interfaces/native/innerkits/event/include",
  ]

  defines = []

  if (input_feature_input_cooperation) {
    defines += [ "OHOS_BUILD_ENABLE_COOPERATE" ]
  }
}

ft_shared_library("libmmi-util") {
  sources = [
    "${mmi_util_path}/common/src/input_event_data_transformation.cpp",
    "${mmi_util_path}/common/src/klog.cpp",
    "${mmi_util_path}/common/src/util.cpp",
    "${mmi_util_path}/common/src/uuid.cpp",
    "${mmi_util_path}/network/src/circle_stream_buffer.cpp",
    "${mmi_util_path}/network/src/net_packet.cpp",
    "${mmi_util_path}/network/src/stream_buffer.cpp",
    "${mmi_util_path}/socket/src/uds_client.cpp",
    "${mmi_util_path}/socket/src/uds_session.cpp",
    "${mmi_util_path}/socket/src/uds_socket.cpp",
  ]

  configs = [
    ":libmmi_util_public_config",
  ]

  public_configs = [
    "//build/gn/configs/system_libs:hilog_config",
    "//build/gn/configs/system_libs:c_utils_config",
  ]

  deps = [
    "${mmi_path}/frameworks/proxy/ft_build:libmmi-common",
  ]
}
